--- a/index.html
+++ b/index.html
@@ -5,7 +5,8 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Catalogo Productos "Distribuidora Dannny"</title>
+  <title>Catalogo Productos Plastico "Distribuidora Dannny 2022"</title>
+  <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/estilos.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.8.1/font/bootstrap-icons.css">
 </head>
@@ -13,7 +14,7 @@
 <body>
   <div class="navbar">
     <a href="index.html">
-      <h2>Catalogo Productos</h2>
+      <h2>Catalogo Productos de Plastico</h2>
     </a>
 
     <a href="cart.html">
